--- a/package.json
+++ b/package.json
@@ -9,8 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.0"
+    "@react-google-maps/api": "^2.19.3",
+    "@types/chart.js": "^2.9.41",
+    "axios": "^1.6.7",
+    "body-parser": "^1.20.2",
+    "chart.js": "^4.4.2",
+    "express": "^4.18.2",
+    "leaflet": "^1.9.4",
+    "link": "^2.1.0",
+    "next": "14.1.0",
+    "next-i18next": "^15.2.0",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "react-leaflet": "^4.2.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.0.5"
+  },
+  "devDependencies": {
+    "prettier": "^3.2.4"
   }
 }
